--- a/android-app/package.json
+++ b/android-app/package.json
@@ -12,43 +12,44 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-vector-icons": "^10.0.0",
-    "react-native-image-picker": "^7.0.3",
-    "react-native-camera": "^4.2.1",
-    "react-native-permissions": "^3.10.1",
-    "react-native-async-storage": "^1.19.3",
-    "react-native-netinfo": "^9.4.1",
-    "react-native-date-picker": "^4.3.3",
-    "react-native-paper": "^5.10.6",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-vision-camera": "^4.0.0",
+    "react-native-permissions": "^4.1.5",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-netinfo/netinfo": "^11.3.1",
+    "react-native-date-picker": "^5.0.5",
+    "react-native-paper": "^5.12.5",
     "react-native-elements": "^3.4.3",
-    "axios": "^1.3.4",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.3.17",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "react-native-screens": "^3.25.0",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-gesture-handler": "^2.12.1"
+    "axios": "^1.7.9",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "react-native-screens": "^3.34.0",
+    "react-native-safe-area-context": "^4.11.1",
+    "react-native-gesture-handler": "^2.20.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
-    "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "@babel/core": "^7.25.9",
+    "@babel/preset-env": "^7.25.9",
+    "@babel/runtime": "^7.25.9",
+    "@react-native/eslint-config": "^0.76.5",
+    "@react-native/metro-config": "^0.76.5",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/react": "^18.3.12",
+    "@types/react-test-renderer": "^18.3.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.1",
+    "jest": "^29.7.0",
     "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "prettier": "^3.3.3",
+    "react-test-renderer": "18.3.1",
+    "typescript": "5.6.3"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=20.0.0",
+    "npm": ">=11.6.2 <12"
   }
 }
