--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
     "android": "cd android-app && npm start"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "electron": "^32.0.0",
-    "electron-builder": "^25.0.0",
-    "express": "^4.21.2",
-    "sqlite3": "^5.1.7",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.0.0",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.15",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1",
     "cors": "^2.8.5",
-    "axios": "^1.7.9",
-    "react-router-dom": "^6.28.0",
-    "react-datepicker": "^7.3.0",
-    "react-select": "^5.8.0",
+    "axios": "^1.3.4",
+    "react-router-dom": "^6.8.1",
+    "react-datepicker": "^4.10.0",
+    "react-select": "^5.7.0",
     "react-table": "^7.8.0",
-    "react-icons": "^5.4.0",
-    "styled-components": "^6.1.13"
+    "react-icons": "^4.7.1",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
@@ -55,8 +55,8 @@
     }
   },
   "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=11.6.2 <12"
+    "node": ">=18.0.0",
+    "npm": ">=10.0.0"
   },
   "browserslist": {
     "production": [
