--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,18 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.21.2",
-    "sqlite3": "^5.1.7",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.15",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1",
     "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=11.6.2 <12"
+    "node": ">=18.0.0",
+    "npm": ">=10.0.0"
   }
 }
